Modified API for /employees and /employee and new parameters limit,offset and sort_by
